Algolia Fulltext-search

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,3 +5,9 @@
 <div>
   <button (click)="logout()">LOGOUT</button>
 </div>
+
+<app-note-creator></app-note-creator>
+
+<app-note-list></app-note-list>
+
+<button (click)="searchNote()">検索</button>
